--- a/assignments/JS/KNIGHT/INDEX.html
+++ b/assignments/JS/KNIGHT/INDEX.html
@@ -105,16 +105,16 @@
 
 
 <div class="speed-changer">
-    <div class="div2"></div>
-    <div class="div2"></div>
-    <div class="div2"></div>
-    <div class="div2"></div>
-    <div class="div2"></div>
-    <div class="div2"></div>
-    <div class="div2"></div>
+    <button class="div2"></button>
+    <button class="div2"></button>
+    <button class="div2"></button>
+    <button class="div2"></button>
+    <button class="div2"></button>
+    <button class="div2"></button>
+    <button class="div2"></button>
 </div>
 
-<audio id="audio" src="assests/Knight%20Rider%20Sms%20!%20Knight%20Rider%20!%20Theme.mp3"></audio>
+<audio id="audio" src="assests/WhatsApp%20Audio%202023-10-04%20at%2008.31.39_6cc810e9.mp3"></audio>
 
 <script src="assests/lib/jQuery/jquery-3.6.4.min.js"></script>
 
