--- a/assignments/JS/KNIGHT/INDEX.html
+++ b/assignments/JS/KNIGHT/INDEX.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../assests/bootstrap/css/bootstrap.css">
-    <link rel="stylesheet" href="../assests/bootstrap/js/bootstrap.js">
-    <link rel="stylesheet" href="../assests/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../assests/bootstrap/js/bootstrap.min.js">
+    <link rel="stylesheet" href="assests/bootstrap/css/bootstrap.min.css">
+    <script src="assests/bootstrap/js/bootstrap.min.js"></script>
     <title>Title</title>
 
     <style>
@@ -81,6 +79,7 @@
             justify-content: center;
         }
     </style>
+
 
 </head>
 <body>
