--- a/assignments.html
+++ b/assignments.html
@@ -193,6 +193,15 @@
                     </a>
                 </div>
             </div>
+            <div class="assignment-card">
+                <img src="assets/images/assignment-image.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 15</h4>
+                    <a href="assignments/JS/KNIGHT/INDEX.html" target="_blank">
+                        <img src="assets/images/icons/expand-arrows.png">
+                    </a>
+                </div>
+            </div>
 
         </div>
     </section>
