--- a/index.html
+++ b/index.html
@@ -330,28 +330,29 @@
 
 
 
-   <!-- <section class="gallery">
+    <section class="gallery">
         <div class="shadow-topic">
             <h1>Memories</h1>
             <h3 class="topic-section" id="gallery">My<span>&nbsp;Gallery</span></h3>
         </div>
         <div class="gallery-container">
             <div class="column">
-                <img src="assets/images/gallery/image1.png"/>
-                <img src="assets/images/gallery/image6.png"/>
-            </div>
-            <div class="column">
-                <img src="assets/images/gallery/image6.png"/>
+                <img src="assets/images/gallery/image9.jpg"/>
                 <img src="assets/images/gallery/img.png"/>
-                <img src="assets/images/gallery/image3.jpg"/>
-
             </div>
             <div class="column">
-                <img src="assets/images/gallery/image5.jpg"/>
+                <img src="assets/images/gallery/image6.png"/>
                 <img src="assets/images/gallery/image1.png"/>
+                <img src="assets/images/gallery/image3.jpg"/>
+                <img src="assets/images/gallery/image8.jpg"/>
+            </div>
+            <div class="column">
+                <img src="assets/images/gallery/img_1.png"/>
+                <img src="assets/images/gallery/image5.jpg"/>
+                <img src="assets/images/gallery/image7.jpg"/>
             </div>
         </div>
-    </section>-->
+    </section>
 
 
     <section class="contact">
