--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         to learn new technologies and apply them to solve complex problems.</p>
 
                     <button>Download CV
-                        <a href="./assets/CV/test.txt" target="_blank">
+                        <a href="assets/CV/test.txt" target="_blank">
                             <i class="fa-solid fa-download" style="color: white"></i>
                         </a>
                     </button>
