--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <div class="project-card">
                 <div class="face-front">
                     <div class="content-wrap">
-                        <img src="assets/images/rm330-pa-logo2-02.jpg">
+                        <img src="assets/images/hostelProject-img.jpeg">
                         <h4>Hostel Management System</h4>
                     </div>
                 </div>
