--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <section class="about-description">
                     <!-- My Details -->
                     <div class="about-details-heading">
-                        <h2>Hi There, I'm Anuki Dilara</h2>
+                        <h2>Hi There,<span>I'm Anuki Dilara</span></h2>
                     </div>
                     <p>I am tyring to be a UI/UX designer.I’m currently studying Graduate Diploma in Software Engineering (GDSE) in Institute of Software Engineering (IJSE). I,m currently working on Web Designing.
                         And I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.</p>
