--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </p>
 
             <div class="home-image">
-                <img src="assets/images/Savindi.jpg" alt="anuki dilara" >
+                <img src="assets/images/Savindi-removebg-preview.png" alt="anuki dilara" >
             </div>
 
             <div class="social-media">
