--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         <div class="home-container">
             <div class="shadow-border"></div>
             <div class="headings">
-                <h1>My Self,<br><span>Savindi Layanga</span></h1>
+                <h1>My Self,<br><span>Anuki Dilara</span></h1>
             </div>
             <p>
                 I am trying to be a front end developer.
             </p>
 
             <div class="home-image">
-                <img src="assets/images/Savindi-removebg-preview.png" alt="anuki dilara" >
+                <img src="assets/images/homeImage2.png" alt="anuki dilara" >
             </div>
 
             <div class="social-media">
@@ -86,7 +86,7 @@
             <article class="article">
                 <div class="hero-image-container">
                     <div class="about-image">
-                        <img src="assets/images/Savindi.jpg"/>
+                        <img src="assets/images/homeImage7.png"/>
                     </div>
                     <div class="rotate-text">
                         <div class="text">
@@ -99,7 +99,7 @@
                 <section class="about-description">
                     <!-- My Details -->
                     <div class="about-details-heading">
-                        <h2>Hi There,<span>I'm Savindi Layanga</span></h2>
+                        <h2>Hi There,<span>I'm Anuki Dilara</span></h2>
                     </div>
                     <p>I am tyring to be a UI/UX designer.I’m currently studying Graduate Diploma in Software Engineering (GDSE) in Institute of Software Engineering (IJSE). I,m currently working on Web Designing.
                         And I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.</p>
@@ -337,7 +337,6 @@
     </section>
 
 
-<!--
     <section class="gallery">
         <div class="shadow-topic">
             <h1>Memories</h1>
@@ -360,7 +359,7 @@
                 <img src="assets/images/gallery/image7.jpg"/>
             </div>
         </div>
-    </section>-->
+    </section>
 
 
     <section class="contact">
