--- a/assignments/CSS/CSS/CASE-05/index.html
+++ b/assignments/CSS/CSS/CASE-05/index.html
@@ -12,18 +12,18 @@
 
 <section>
     <div><img src="images/image2.jpg" width="100%" height="100%"></div>
-    <div><img src="images/image1.jpg" width="100%" height="100%"></div>
+    <div><img src="images/image3.jpg" width="100%" height="100%"></div>
     <div><img src="images/image2.jpg" width="100%" height="100%"></div>
-    <div><img src="images/image1.jpg" width="100%" height="100%"></div>
+    <div><img src="images/image1.png" width="100%" height="100%"></div>
 
     <div><img src="images/image5.jpg" width="100%" height="100%"></div>
     <div><img src="images/image4.jpg" width="100%" height="100%"></div>
+    <div><img src="images/image10.jpg" width="100%" height="100%"></div>
     <div><img src="images/image5.jpg" width="100%" height="100%"></div>
-    <div><img src="images/image7.jpg" width="100%" height="100%"></div>
 
     <div><img src="images/image10.jpg" width="100%" height="100%"></div>
-    <div><img src="images/image2.jpg" width="100%" height="100%"></div>
-    <div><img src="images/image10.jpg" width="100%" height="100%"></div>
+    <div><img src="images/image1.png" width="100%" height="100%"></div>
+    <div><img src="images/image3.jpg" width="100%" height="100%"></div>
     <div><img src="images/image4.jpg" width="100%" height="100%"></div>
 </section>
 </body>
