--- a/assignments/CSS/Animation/Case-03/index.html
+++ b/assignments/CSS/Animation/Case-03/index.html
@@ -46,28 +46,28 @@
 
 
         main>section>div:nth-child(1){
-            background: url("images/image4.jpg");
+            background: url("../../CSS/CASE-05/images/image1.png");
             background-position: center;
             background-size: cover;
 
         }
 
         main>section>div:nth-child(2){
-            background: url("images/image2.jpg");
+            background: url("../../CSS/CASE-05/images/image2.jpg");
             background-position: center;
             background-size: cover;
 
         }
 
         main>section>div:nth-child(3){
-            background: url("images/image5.jpg");
+            background: url("../../CSS/CASE-05/images/image3.jpg");
             background-position: center;
             background-size: cover;
 
         }
 
         main>section>div:nth-child(4){
-            background: url("images/image1.jpg");
+            background: url("../../CSS/CASE-05/images/image4.jpg");
             background-position: center;
             background-size: cover;
 
@@ -94,7 +94,6 @@
 
             }
         }
-
 
     </style>
 </head>
