--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="author" content="Anuki Dilara">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=3 minimum-scale=1 user-scalable=no">
+    <link rel="icon" href="assets/images/AD-logo.png" type="image/x-icon">
+    <meta content="Anuki Dilara, Anuki Dilara, Anuki, Anuki, gdse65, software eengineering , IJSE, CMJD, portfolio, website, Dark theme website" name="keywords">
+
     <link rel="stylesheet" href="assets/style.css">
-    <!--<link rel="stylesheet" href="assets/font-awsome/css/all.min.css">-->
     <link rel="stylesheet" href="assets/normalize.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="assets/fontawesome/css/all.min.css">
@@ -15,6 +17,8 @@
 <body>
 
 <header class="header">
+    <!--<div><img src="assets/images/AD-logo.png" height="50" width="50"/></div>-->
+    <a href="#" class="logo">Portfolio<span class="cyan">.</span></a>
     <nav class="nav_bar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -45,19 +49,19 @@
 
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/anuki-dilara-2a2b2a228" target="_blank">
-                    <i class="fa-brands fa-linkedin" style="color: #FF014F;"></i>
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
 
                 <a href="https://www.instagram.com/anu_dil__/" target="_blank">
-                    <i class="fa-brands fa-instagram" style="color: #FF014F;"></i>
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
 
                 <a href="https://web.telegram.org/k/" target="_blank">
-                    <i class="fa-brands fa-telegram" style="color: #FF014F;"></i>
+                    <i class="fa-brands fa-telegram"></i>
                 </a>
 
                 <a href="https://github.com/Anuki-Dilara" target="_blank">
-                    <i class="fa-brands fa-github" style="color: #FF014F;"></i>
+                    <i class="fa-brands fa-github"></i>
                 </a>
             </div>
             <div class="status">
