--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
 
 <header class="header">
-    <!--<div><img src="assets/images/AD-logo.png" height="50" width="50"/></div>-->
     <a href="#" class="logo">Portfolio<span class="cyan">.</span></a>
     <nav class="nav_bar">
         <ul>
@@ -154,20 +153,7 @@
                     </p>
                 </div>
             </div>
-            <h4 class="skills-topic">Skills</h4>
-            <div class="skills-container">
-                <div class="languages">
-                    <div><h4 class="skills-sub-topic">Languages<div></div></h4></div>
-                    <div>
-                        <img src="assets/images/skills/sql.png"/>
-                        <img src="assets/images/skills/Python-logo-notext.svg.png"/>
-                        <img src="assets/images/skills/JavaScript-logo.png"/>
-                        <img src="assets/images/skills/java-logo.png"/>
-                        <img src="assets/images/skills/ISO_C++_Logo.svg.png"/>
-                        <img src="assets/images/skills/HTML5_logo_and_wordmark.svg.png"/>
-                        <img src="assets/images/skills/css-logo.png" />
-                    </div>
-                </div>
+           <!-- <div class="skills-container">
                 <div class="tools">
                     <div><h4 class="skills-sub-topic">Tools</h4></div>
                     <div>
@@ -177,9 +163,57 @@
                         <img src="assets/images/skills/SceneBuilderLogo.webp" height="781" width="781"/>
                     </div>
                 </div>
+            </div>-->
+        </div>
+    </section>
+
+    <section class="skill-tool">
+        <div class="skills" id="skills">
+            <h4 class="skills-topic">Skills</h4>
+            <div class="skill-row">
+                <div class="skill-column">
+                    <div class="skill-box">
+                        <div class="skill-content">
+                            <div class="progress">
+                                <h2>HTML <span>90%</span></h2>
+                                <div class="bar"><span id="html"></span></div>
+                            </div>
+
+                            <div class="progress">
+                                <h2>CSS <span>80%</span></h2>
+                                <div class="bar"><span id="css"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill-column">
+                    <div class="skill-box">
+                        <div class="skill-content">
+                            <div class="progress">
+                                <h2>Java <span>50%</span></h2>
+                                <div class="bar"><span id="java"></span></div>
+                            </div>
+
+                            <div class="progress">
+                                <h2>Java Script <span>60%</span></h2>
+                                <div class="bar"><span id="js"></span></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
+        <div class="tools">
+            <div><h4 class="skills-sub-topic">Tools</h4></div>
+            <div>
+                <img src="assets/images/skills/intelij-logo.png" height="512" width="512"/>
+                <img src="assets/images/skills/figma-logo.png" height="370" width="675"/>
+                <img src="assets/images/skills/netbeans-logo.png" height="512" width="444"/>
+                <img src="assets/images/skills/SceneBuilderLogo.webp" height="781" width="781"/>
+            </div>
+        </div>
     </section>
 
     <section class="services">
