--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <article class="article">
                 <div class="hero-image-container">
                     <div class="about-image">
-                        <img src="assets/images/homeImage7.png"/>
+                        <img src="assets/images/about-image3.jpg"/>
                     </div>
                     <div class="rotate-text">
                         <div class="text">
