--- a/index.html
+++ b/index.html
@@ -123,36 +123,58 @@
     </section>
 
     <section class="journey">
-        <h4 class="journey-topic">My Journey</h4>
-        <div class="journey-container-box">
-            <div class="journey-container">
-                <div>
-                    <h5>2006 - 2012</h5>
-                    <p>
-                        1-5 Grade- MR/Rathanajothi Vidyalaya
-                    </p>
-                </div>
+        <h4 class="journey-topic">Education</h4>
+        <div class="education">
+            <div class="education-row">
+                <div class="education-column">
 
-                <div><h5>2013 - 2018</h5>
-                    <p>
-                        G.C.E  Ordinary Level - Mahinda Rajapaksha Vidyalaya Matara
-                    </p>
-                </div>
+                    <div class="education-box">
 
-                <div>
-                    <h5>2019 - 2021</h5>
-                    <p>
-                        G.C.E  Advanced Level - Mahinda Rajapaksha Vidyalaya Matara
-                    </p>
-                </div>
+                        <div class="education-content">
+                            <div class="content">
+                                <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
+                                <h2>1-5 Grade- MR/Rathanajothi Vidyalaya</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
+                            </div>
+                        </div>
 
-                <div>
-                    <h5>2022 - 2024</h5>
-                    <p>
-                        Graduated Diploma in IJSE
-                    </p>
+                        <div class="education-content">
+                            <div class="content">
+                                <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
+                                <h2>1-5 Grade- MR/Rathanajothi Vidyalaya</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
+                            </div>
+                        </div>
+
+                        <div class="education-content">
+                            <div class="content">
+                                <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
+                                <h2>G.C.E Ordinary Level - Mahinda Rajapaksha Vidyalaya Matara</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
+                            </div>
+                        </div>
+
+                        <div class="education-content">
+                            <div class="content">
+                                <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
+                                <h2>G.C.E Advanced Level - Mahinda Rajapaksha Vidyalaya Matara</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
+                            </div>
+                        </div>
+
+                        <div class="education-content">
+                            <div class="content">
+                                <div class="year"><i class='bx bxs-calendar'></i>2006-2012</div>
+                                <h2>Graduated Diploma in IJSE</h2>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus aliquam atque fugit in laudantium nesciunt perspiciatis porro quos similique? Autem consequuntur debitis facere laudantium quisquam saepe sit voluptas voluptatibus.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
+    </section>
+
            <!-- <div class="skills-container">
                 <div class="tools">
                     <div><h4 class="skills-sub-topic">Tools</h4></div>
@@ -164,8 +186,6 @@
                     </div>
                 </div>
             </div>-->
-        </div>
-    </section>
 
     <section class="skill-tool">
         <div class="skills" id="skills">
