--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </p>
 
             <div class="home-image">
-                <img src="assets/images/homeImage2.png" alt="anuki dilara" >
+                <img src="assets/images/homeImage2-.png" alt="anuki dilara" >
             </div>
 
             <div class="social-media">
@@ -89,7 +89,7 @@
             <article class="article">
                 <div class="hero-image-container">
                     <div class="about-image">
-                        <img src="assets/images/about-image3.jpg"/>
+                        <img src="assets/images/homeImage7.png"/>
                     </div>
                     <div class="rotate-text">
                         <div class="text">
@@ -188,8 +188,10 @@
             </div>-->
 
     <section class="skill-tool">
+        <div class="skill-tool-container"></div>
         <div class="skills" id="skills">
             <h4 class="skills-topic">Skills</h4>
+            <div><h4 class="skills-sub-topic">Languages</h4></div>
             <div class="skill-row">
                 <div class="skill-column">
                     <div class="skill-box">
@@ -198,10 +200,13 @@
                                 <h2>HTML <span>90%</span></h2>
                                 <div class="bar"><span id="html"></span></div>
                             </div>
-
                             <div class="progress">
                                 <h2>CSS <span>80%</span></h2>
                                 <div class="bar"><span id="css"></span></div>
+                            </div>
+                            <div class="progress">
+                                <h2>MySQL <span>80%</span></h2>
+                                <div class="bar"><span id="mysql"></span></div>
                             </div>
                         </div>
                     </div>
@@ -214,10 +219,13 @@
                                 <h2>Java <span>50%</span></h2>
                                 <div class="bar"><span id="java"></span></div>
                             </div>
-
                             <div class="progress">
                                 <h2>Java Script <span>60%</span></h2>
                                 <div class="bar"><span id="js"></span></div>
+                            </div>
+                            <div class="progress">
+                                <h2>Python <span>60%</span></h2>
+                                <div class="bar"><span id="python"></span></div>
                             </div>
                         </div>
                     </div>
@@ -227,11 +235,19 @@
 
         <div class="tools">
             <div><h4 class="skills-sub-topic">Tools</h4></div>
-            <div>
-                <img src="assets/images/skills/intelij-logo.png" height="512" width="512"/>
-                <img src="assets/images/skills/figma-logo.png" height="370" width="675"/>
-                <img src="assets/images/skills/netbeans-logo.png" height="512" width="444"/>
-                <img src="assets/images/skills/SceneBuilderLogo.webp" height="781" width="781"/>
+            <div class="tool-container">
+                <div class="progress">
+                    <img src="assets/images/skills/intelij-logo.png"/>
+                </div>
+                <div class="progress">
+                    <img src="assets/images/skills/figma-logo.png"/>
+                </div>
+                <div class="progress">
+                    <img src="assets/images/skills/netbeans-logo.png"/>
+                </div>
+                <div class="progress">
+                    <img src="assets/images/skills/SceneBuilderLogo.webp"/>
+                </div>
             </div>
         </div>
     </section>
@@ -428,9 +444,9 @@
 
         <section class="contact-container">
             <div class="detail-container">
-                <div><img src="assets/images/icons/telephone%20(1).png"><h5>+94714666422</h5></div>
-                <div><img src="assets/images/icons/email%20(2).png"><h5>anukidilara002@gmail.com</h5></div>
-                <div><img src="assets/images/icons/location%20(1).png"></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
+                <div><!--<img src="assets/images/icons/telephone%20(1).png">--><i class='bx bx-phone-call'></i><h5>+94714666422</h5></div>
+                <div><!--<img src="assets/images/icons/email%20(2).png">--><i class='bx bx-envelope'></i><h5>anukidilara002@gmail.com</h5></div>
+                <div><!--<img src="assets/images/icons/location%20(1).png">--><i class='bx bx-location-plus'></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
             </div>
 
             <div class="contact-form">
