--- a/assignments/JS/SPA/index.html
+++ b/assignments/JS/SPA/index.html
@@ -8,6 +8,13 @@
         #navbarSupportedContent ul li a:hover{
             color: #00cccc;
         }
+        #dashboard{
+            background: url("assets/images/Retail-Shop-Interior-Designs.jpg");
+            background-size: cover;
+            background-position: center;
+            width: 100%;
+            height: 100vh;
+        }
     </style>
 </head>
 <body>
@@ -43,15 +50,15 @@
 </header>
 
 <section class="container " id="dashboard">
-    <div class="row">
+   <!-- <div class="row">
         <div class="col-xl-6">
-            <div class=" border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4 text-center" style="width: 300px; height: 200px">Customers<label class="text-white"></label></div>
-            <div class=" border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4 text-center" style="width: 300px; height: 200px">Items</div>
+            &lt;!&ndash;<div class=" border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4 text-center" style="width: 300px; height: 200px">Customers<label class="text-white"></label></div>
+            <div class=" border border-4 border-primary-subtle rounded-5 m-5 bg-dark text-white fw-bold fs-4 text-center" style="width: 300px; height: 200px">Items</div>&ndash;&gt;
         </div>
         <div class="col-xl-6">
-            <img src="assets/images/pos-terminal-shop-ready-work.jpg" class="img-thumbnail border rounded-5 m-5" alt="...">
+            &lt;!&ndash;<img src="assets/images/pos-terminal-shop-ready-work.jpg" class="img-thumbnail border rounded-5 m-5" alt="...">&ndash;&gt;
         </div>
-    </div>
+    </div>-->
 </section>
 
 <!--------------------------------------------------------customer--------------------------------------->
@@ -63,21 +70,36 @@
     <hr class="border border-info border-2 opacity-50">
     <section class="container border border-4 border-dark-subtle rounded-5 p-3 shadow-lg">
         <form>
-            <div class="mb-3">
-                <input class="form-control" type="text" placeholder="ID" aria-label="default input example">
-            </div>
-            <div class="mb-3">
-                <input class="form-control" type="text" placeholder="Name" aria-label="default input example">
-            </div>
-            <div class="mb-3">
-                <input class="form-control" type="text" placeholder="Address" aria-label="default input example">
-            </div>
-            <div class="mb-3">
-                <input class="form-control" type="text" placeholder="contact" aria-label="default input example">
+            <div class="form-container">
+                <div class="mb-3">
+                    <label for="txtCustomerID">Customer ID</label>
+                    <input class="form-control" id="txtCustomerID" required type="text">
+                    <span class="control-error" id="lblcusid"></span>
+                </div>
+                <div class="mb-3">
+                    <label for="txtCustomerName">Customer Name</label>
+                    <input class="form-control" id="txtCustomerName" type="text">
+                    <span class="control-error" id="lblcusname"></span>
+                </div>
+                <div class="mb-3">
+                    <label for="txtCustomerAddress">Customer Address</label>
+                    <input class="form-control" id="txtCustomerAddress" type="text">
+                    <span class="control-error" id="lblcusaddress"></span>
+                </div>
+                <div class="mb-3">
+                    <label for="txtCustomerSalary">Customer Salary</label>
+                    <input class="form-control" id="txtCustomerSalary" type="text">
+                    <span class="control-error" id="lblcussalary"></span>
+                </div>
             </div>
 
-            <button type="button" class="btn btn-info">Save</button>
-            <button type="button" class="btn btn-success">Update</button>
+            <div class="btn-group" role="group" aria-label="...">
+                <button class="btn btn-success me-2" id="btnSaveCus" >Save</button>
+                <button class="btn btn-warning me-2" id="btnUpCus" >Update</button>
+                <button class="btn btn-danger me-2" id="btnDelCus" >Delete</button>
+                <button class="btn btn-danger" id="btnClearAll">Clear All</button>
+                <button type="button" class="btn btn-warning me-2" id="btnViewCus">View All</button>
+            </div>
         </form>
     </section>
 
