--- a/assignments.html
+++ b/assignments.html
@@ -143,7 +143,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 10</h4>
-                    <a href="assignments/CSS/Animation/Case-01/index.html" target="_blank">
+                    <a href="assignments/CSS/Transition/Case_04/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -152,7 +152,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 11</h4>
-                    <a href="assignments/CSS/Animation/Case-03/index.html" target="_blank">
+                    <a href="assignments/CSS/Animation/Case-01/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -161,7 +161,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 12</h4>
-                    <a href="assignments/CSS/Animation/Case-04" target="_blank">
+                    <a href="assignments/CSS/Animation/Case-02/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -170,7 +170,7 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 13</h4>
-                    <a href="assignments/JS/QUE/Case-01/index.html" target="_blank">
+                    <a href="assignments/CSS/Animation/Case-03/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
                 </div>
@@ -179,6 +179,24 @@
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
                     <h4>Assignment 14</h4>
+                    <a href="assignments/CSS/Animation/Case-04" target="_blank">
+                        <img src="assets/images/icons/expand-arrows.png">
+                    </a>
+                </div>
+            </div>
+            <div class="assignment-card">
+                <img src="assets/images/assignment-image.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 15</h4>
+                    <a href="assignments/JS/QUE/Case-01/index.html" target="_blank">
+                        <img src="assets/images/icons/expand-arrows.png">
+                    </a>
+                </div>
+            </div>
+            <div class="assignment-card">
+                <img src="assets/images/assignment-image.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 16</h4>
                     <a href="assignments/JS/QUE/Case-02/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
@@ -187,7 +205,7 @@
             <div class="assignment-card">
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
-                    <h4>Assignment 15</h4>
+                    <h4>Assignment 17</h4>
                     <a href="assignments/JS/SPA/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
@@ -196,7 +214,7 @@
             <div class="assignment-card">
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
-                    <h4>Assignment 15</h4>
+                    <h4>Assignment 18</h4>
                     <a href="assignments/JS/KNIGHT/INDEX.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
@@ -205,7 +223,7 @@
             <div class="assignment-card">
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
-                    <h4>Assignment 16</h4>
+                    <h4>Assignment 19</h4>
                     <a href="assignments/JS/CAL/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
@@ -214,7 +232,7 @@
             <div class="assignment-card">
                 <img src="assets/images/assignment-image.png"/>
                 <div class="assigment-layer">
-                    <h4>Assignment 16</h4>
+                    <h4>Assignment 20</h4>
                     <a href="assignments/JS/InMemoryPOS/index.html" target="_blank">
                         <img src="assets/images/icons/expand-arrows.png">
                     </a>
