--- a/assignments.html
+++ b/assignments.html
@@ -30,7 +30,7 @@
             font-family: Quicksand, sans-serif;
         }
         h3 span{
-            color: #FF014F;
+            color: #00abf0;
             font-family: Quicksand, sans-serif;
         }
 
