--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </nav>
 </header>
 <hr>
-<!--<div id="preloader">
+<div id="preloader">
 
-</div>-->
+</div>
 <main>
     <section class="home" id="home">
         <div class="home-container">
